# keys

./: Cargo.toml  README.md  build.rs  ijkl.ahk
.github/workflows/: build.yml
config/: default.json
src/: app.rs  config.rs  keyboard.rs  main.rs  tray.rs  ui.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/platform/macos/: keyboard.rs  mod.rs  tray.rs
src/platform/windows/: keyboard.rs  mod.rs  tray.rs
