[package]
name = "keys"
version = "0.1.0"
edition = "2021"
build = "build.rs"  

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48"
features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Console"
]

[target.'cfg(target_os = "macos")'.dependencies]
rdev = "0.5"
tray-icon = "0.14"
tao = "0.24"

[build-dependencies]
embed-resource = "1.5.0"