[package]
name = "nocaps"
version = "1.3.0"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
directories = "6.0"
eframe = { version = "0.34", default-features = false, features = ["glow", "wayland", "x11"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
tray-icon = { version = "0.24", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
thread-priority = "3.1"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.13"
gtk = "0.18"
libloading = "0.8"
tray-icon = { version = "0.24", default-features = false, features = ["gtk"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "macos")'.dependencies]
enigo = { version = "0.6", default-features = false }
rdev = { version = "0.5", features = ["unstable_grab"] }

[build-dependencies]
embed-resource = "1.5"
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
